--- a/index.html
+++ b/index.html
@@ -2,17 +2,76 @@
 <html lamg="ja">
 <head>
  <meta charset="UTF-8">
- <title>index.html</title>
+
+ <meta name="description" content="HTML template page">
+ <meta name="keywords" content="tokyo,night,photo,東京,写真">
+ <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+
+ <base href="#">
+
+ <link rel="stylesheet" href="index.css" >
+ <link rel="stylesheet" href="css/lightbox.css" >
+ <link rel="icon" href="favicon.png" type="image/png" size="16x16">
+
+ <script src="jquery-3.4.1.min.js"></script>
+
+ <title>個人的な景観 - shintani-akira.com</title>
 </head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111602278-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111602278-1');
+</script>
+
 <body>
 
-<header>
-<h1>test</h1>
-</header>
+<div class="wrapper_full flex_row fadein_page_load"> <!-- 縦横がview幅のボックス -->
 
-<footer>
- 2021
-</footer>
+<!-- left column begin -->
+  <div class="pane_left flex_col">
+  <div>
+  <header class="global_header" style="border-bottom: 1px solid #ddd;">
+  <h1><a href="index.html"><span style="font-size: 2.2rem;">個</span><span style="font-size:1.3rem;">人</span>的<span style="font-size:1.5rem;">な</span>景観</a></h1>
+  <h2>A Personal Landscape</h2>
+  </header>
 
+<!-- global navigation -->
+  <nav class="global_nav" style="margin-top: 60px;">
+  <ul>
+  <li><a href="photo.html">Photograph</a></li>
+  <!-- <li><a href="gairo.html">Text</a></li> -->
+  <li><a href="contact.html">Contact</a></li>
+  </ul>
+  </nav>
+  </div>
+
+<!-- footer, social links -->
+  <footer>
+  <nav>
+  <ul class="footer_social_links">
+  <li><a href="#"><img src="img/icon/social-038-round_instagram.png" alt="instagram"></a></li>
+  <li><a href="#"><img src="img/icon/social-005-round_twitter.png" alt="twitter"></a></li>
+  <li><a href="#"><img src="img/icon/social-025-round_blogger.png" alt="blogger"></a></li>
+  <li><a href="#"><img src="img/icon/social-004-round_flickr.png" alt="flickr"></a></li>
+  <li><a href="#"><img src="img/icon/social-034-round_soundcloud.png" alt="soundcloud"></a></li>
+  </ul>
+  </nav>
+  <small>&copy; shintani-akira.com</small>
+  </footer>
+  </div>
+<!-- left column end -->
+
+<!-- right column begin -->
+  <div class="pane_right flex_center">
+  <img class="hero_img" src="./img/_DSF3615.jpg" alt="hero_photo">
+  </div>
+<!-- right column end -->
+
+</div>
 </body>
 </html>
