--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 <!-- right column begin -->
   <div class="pane_right flex_center">
-  <img class="hero_img" src="./img/_DSF3615.jpg" alt="hero_photo">
+  <img class="hero_img" src="img/_DSF3615.jpg" alt="hero_photo">
   </div>
 <!-- right column end -->
 
