--- a/gairo.html
+++ b/gairo.html
@@ -52,11 +52,11 @@
   <footer>
   <nav>
   <ul class="footer_social_links">
-  <li><a href="#"><img src="img/icon/social-038-round_instagram.png" alt="instagram"></a></li>
-  <li><a href="#"><img src="img/icon/social-005-round_twitter.png" alt="twitter"></a></li>
-  <li><a href="#"><img src="img/icon/social-025-round_blogger.png" alt="blogger"></a></li>
-  <li><a href="#"><img src="img/icon/social-004-round_flickr.png" alt="flickr"></a></li>
-  <li><a href="#"><img src="img/icon/social-034-round_soundcloud.png" alt="soundcloud"></a></li>
+  <li><a href="https://www.instagram.com/claustroman/"><img src="img/icon/social-038-round_instagram.png" alt="instagram"></a></li>
+  <li><a href="https://twitter.com/claustroman"><img src="img/icon/social-005-round_twitter.png" alt="twitter"></a></li>
+  <li><a href="https://my-sweet-stm.blogspot.com/"><img src="img/icon/social-025-round_blogger.png" alt="blogger"></a></li>
+  <li><a href="https://www.flickr.com/photos/claustroman/"><img src="img/icon/social-004-round_flickr.png" alt="flickr"></a></li>
+  <li><a href="https://soundcloud.com/claustroman"><img src="img/icon/social-034-round_soundcloud.png" alt="soundcloud"></a></li>
   </ul>
   </nav>
   <small>&copy; shintani-akira.com</small>
